--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: thought-threads
     runtime: node
     plan: free
-    buildCommand: npm install && npm run build
+    buildCommand: npm install && cd client && npm install && npm run build && cd ..
     startCommand: npm start
     envVars:
       - key: NODE_ENV
